--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -26,7 +26,7 @@
 }
 
 @font-face {
-  font-family: 'Ubuntu', 'monospace';
+  font-family: 'Ubuntu';
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/Ubuntu-Regular') format('woff2');
