update css and font

--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -18,8 +18,9 @@
 .dark {
   --primary-color: #EFEFE6;
   --secondary-color: #292929;
-  --tertiary-color: #009900;
-  --tertiary-color-light: #009900;
+  --tertiary-color: #0F0;
+  --tertiary-color-light: #0F0;
+  --link-color: #0F0;
   --secondary-color-dark: #3D3D29;
   --scrollbar-track: #292929;
   --scrollbar-thumb: #525252;
