--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -27,7 +27,7 @@
 }
 
 @font-face {
-  font-family: 'Fira Code',monospace;
+  font-family: "Fira Code",monospace;
   font-style: normal;
   font-weight: 400;
   src: url('../fonts/FiraCode-Regular.woff2') format('woff2');
