--- a/layouts/partials/comments.html
+++ b/layouts/partials/comments.html
@@ -1,4 +1,4 @@
-{{- if isset .Site.Params "giscus" -}}
+{{- if asset .Site.Params "giscus" -}}
   {{- if and (isset .Site.Params.giscus "repo") (not (eq .Site.Params.giscus.repo "" )) (eq (.Params.article.showComments | default true) false) -}}
   <script src="https://giscus.app/client.js"
     data-repo="{{ .Site.Params.giscus.repo }}"
