--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -32,3 +32,9 @@
   font-weight: 400;
   src: url('../fonts/FiraCode-Regular.woff2') format('woff2');
 }
+
+#qrcode {
+  width:160px;
+  height:160px;
+  margin-top:15px;
+}
