--- a/layouts/partials/head/js.html
+++ b/layouts/partials/head/js.html
@@ -9,7 +9,7 @@
 {{ end }}
 
 {{ if .Site.Params.enablePageQRCode | default false }}
-  {{ $scripts := $scripts | append "js/genpageqr.js"}}
+  {{ $scripts := $scripts | append "js/pageqr.js" }}
 {{ end }}
 
 {{ range $scripts }}
