--- a/layouts/partials/books_reading.html
+++ b/layouts/partials/books_reading.html
@@ -11,29 +11,28 @@
 {{ range $key, $value := $data }}
     {{ range $key, $value := $value.me }}
         {{ range $key, $value := $value.user_books }}
-            <a class="card_container_link" href="https://hardcover.app/books/{{ $value.book.slug }}">
+            <a class="card-container-link" href="https://hardcover.app/books/{{ $value.book.slug }}">
             <figure class="card">
-                <div class="content_container_wrapper">
-                    <div class="content_container_flex">
-                      <div class="card_title">{{ $value.book.title }}</div>
+                <div class="content-container-wrapper">
+                    <div class="content-container-flex">
+                      <div class="card-title">{{ $value.book.title }}</div>
 
-                      <div class="card_description">
+                      <div class="card-description">
                         {{ $value.book.description | truncate 100 }}
                       </div>
 
                       {{ range $key, $value := $value.book.contributions | first 1}}
-                        <div class="card_author">
+                        <div class="card-author">
                             {{ $value.author.name }}
                         </div>
                       {{ end }}
                     </div>
-                    <div class="empty_container_flex"></div>
-                    <div class="book_cover_container_flex">
-                      <img class="book_cover" src="{{ $value.book.image.url }}" alt="{{$value.book.title }} cover" />
+                    <div class="book-cover-container-flex">
+                      <img class="book-cover" src="{{ $value.book.image.url }}" alt="{{$value.book.title }} cover" />
                     </div>
                   </div>
-                  </a>
-            </figure>
+              </figure>
+              </a>
           {{ end }}
     {{ end }}
 {{ end }}
