Updating library wording

--- a/layouts/_default/library.html
+++ b/layouts/_default/library.html
@@ -9,7 +9,7 @@
 
 
 <div class="library-post-content">
-  <h2>Currently Reading</h2>
+  <h2>Reading</h2>
   <p>
     List of books I'm currently reading. These will change over time as I finish them or send them to the depth of my DNF.
   </p>
@@ -18,7 +18,7 @@
 {{ partial "books_reading.html" . }}
 
 <div class="library-post-content">
-  <h2>Finished Reading</h2>
+  <h2>Read</h2>
   <p>
     List of books I finished.
   </p>
