--- a/layouts/partials/qrcode.html
+++ b/layouts/partials/qrcode.html
@@ -1,5 +1,5 @@
 <div class="qr">
-  <div class="qr-text">Share this post:<div>
+  <div class="qr-text">Share this page:<div>
     {{ $opts := dict 
         "level" "high" 
         "scale" 3
