--- a/static/terminal.css
+++ b/static/terminal.css
@@ -206,10 +206,10 @@ input[type="radio"]:checked {
 img {
   display: block;
   max-width: 100%;
-  border: 8px solid var(--accent);
-  border-radius: var(--radius);
+  border: 4px solid var(--accent);
+  border-radius: 8px;
   border-width: thin;
-  padding: 8px;
+  padding: 4px;
   overflow: hidden;
 }
 
