--- a/layouts/_default/library.html
+++ b/layouts/_default/library.html
@@ -19,10 +19,9 @@
 
 <div class="library-post-content">
   <h2>Read</h2>
-  <p>
-    List of books I finished.
-  </p>
-  <p>Wow... Such empty...</p>
+  <p>List of books I have read. I will not provide any recommendations or reviews for the titles listed. This is also not the full extent of the list. Partially because I read them so long ago and I don't remember them.</p>
 </div>
+
+{{ partial "books_read.html" . }}
 
 {{ end }}
