--- a/layouts/partials/books_reading.html
+++ b/layouts/partials/books_reading.html
@@ -11,10 +11,10 @@
 {{ range $key, $value := $data }}
     {{ range $key, $value := $value.me }}
         {{ range $key, $value := $value.user_books }}
-            <a class="card-container-link" href="https://hardcover.app/books/{{ $value.book.slug }}">
+            <a class="card-link" href="https://hardcover.app/books/{{ $value.book.slug }}">
             <figure class="card">
-                <div class="content-container-wrapper">
-                    <div class="content-container-flex">
+                <div class="card-wrapper">
+                    <div class="content-container">
                       <div class="card-title">{{ $value.book.title }}</div>
 
                       <div class="card-description">
@@ -27,7 +27,7 @@
                         </div>
                       {{ end }}
                     </div>
-                    <div class="book-cover-container-flex">
+                    <div class="book-cover-container">
                       <img class="book-cover" src="{{ $value.book.image.url }}" alt="{{$value.book.title }} cover" />
                     </div>
                   </div>
