--- a/static/terminal.css
+++ b/static/terminal.css
@@ -58,10 +58,14 @@ h3 {
   letter-spacing: 0;
 }
 
-h4,
+h4 {
+  font-size: calc(var(--font-size) * 1.20);
+  letter-spacing: 0;
+}
+
 h5,
 h6 {
-  font-size: calc(var(--font-size) * 8);
+  font-size: calc(var(--font-size) * 1.10);
   letter-spacing: 0;
 }
 
